# CapScript-Youtube-Subtitle-Search-Tool

./: .gitignore  CMakeLists.txt  CapScriptPro.rc  CapScriptUpdater.rc  LICENSE  README.md
.github/workflows/: build-release.yml  pages.yml
assets/: resources.qrc
assets/qml/: YouTubePlayer.qml
cloudflare-worker/capscript-feedback-worker/: package-lock.json  package.json
cloudflare-worker/capscript-feedback-worker/src/: index.ts
cloudflare-worker/capscript-feedback-worker/test/: index.spec.ts
docs/: animations.css  animations.js  app.js  index.html  styles.css
python/: capscript_engine.py  cli.py  requirements.txt
qml/QtWebView/: plugins.qmltypes  qmldir
scripts/: bundle_python.py
src/: main.cpp
src/app/: Application.cpp  Application.h
src/core/: AutoUpdater.cpp  AutoUpdater.h  PythonBridge.cpp  PythonBridge.h  Settings.cpp  Settings.h  ToolPaths.h  UrlLauncher.cpp  UrlLauncher.h
src/ui/: MainWindow.cpp  MainWindow.h  Sidebar.cpp  Sidebar.h  TitleBar.cpp  TitleBar.h
src/ui/pages/: AboutPage.cpp  AboutPage.h  ClipDownloaderPage.cpp  ClipDownloaderPage.h  ListCreatorPage.cpp  ListCreatorPage.h  RendererPage.cpp  RendererPage.h  SearchPage.cpp  SearchPage.h  ViewerPage.cpp  ViewerPage.h
src/ui/styles/: ThemeManager.cpp  ThemeManager.h
src/ui/widgets/: DonateButton.cpp  DonateButton.h  FeedbackWidget.cpp  FeedbackWidget.h  GitHubButton.cpp  GitHubButton.h  SupportPopup.cpp  SupportPopup.h  WebView2Widget.cpp  WebView2Widget.h
src/updater/: main.cpp
src/workers/: ClipWorker.cpp  ClipWorker.h  RenderWorker.cpp  RenderWorker.h  SearchWorker.cpp  SearchWorker.h
